--- a/platforms/browser/www/about_us.html
+++ b/platforms/browser/www/about_us.html
@@ -124,14 +124,14 @@ hr.style13 {
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a href="#"><i class="fa fa-dashboard"></i> &nbsp;Dashboard</a>
-  <a href="#"><i class="fa fa-clone"></i> &nbsp;Free Questions</a>
+  <a href="free_question.html"><i class="fa fa-clone"></i> &nbsp;Free Questions</a>
   <a href="#"><i class="fa fa-files-o"></i> &nbsp;Test Series</a>
-  <a href="#"><i class="fa fa-file-text"></i> &nbsp;Study Materials</a>
-  <a href="#"><i class="fa fa-video-camera"></i> &nbsp;Video Tutorials</a>
+  <a href="study_material.html"><i class="fa fa-file-text"></i> &nbsp;Study Materials</a>
+  <a href="video.html"><i class="fa fa-video-camera"></i> &nbsp;Video Tutorials</a>
   <a href="#"><i class="fa fa-comment"></i> &nbsp;Notifications</a>
   <a href="profile.html"><i class="fa fa-user"></i> &nbsp;Profile</a>
   <a href="about_us.html"><i class="fa fa-home"></i> &nbsp;About Us</a>
-  <a href="#"><i class="fa fa-edit"></i> &nbsp;Terms of Use</a>
+  <a href="terms.html"><i class="fa fa-edit"></i> &nbsp;Terms of Use</a>
   <a href="#"><i class="fa fa-life-ring"></i> &nbsp;Support</a>
   <a href="#" id="btnLogout"><i class="fa fa-sign-out"></i> &nbsp;Log Out</a>
 </div>
