--- a/www/home.html
+++ b/www/home.html
@@ -150,7 +150,7 @@ hr.style13 {
 <div style="padding:120px 15px 15px 15px;"> 
 	<div class="well">
     	<div class="alert alert-info text-center" style="background-color:#005959; color:#FFFFFF;">
-        <span style="font-size:40px;"><img src="img/images-nxias/profile-image.jpg" style="border-radius:50%; width:100px;" /> &nbsp;Subhomoy Samanta</span>
+        <span style="font-size:40px;"><img src="img/images-nxias/profile-image.jpg" style="border-radius:50%; width:100px;" /> <span id="page_user">&nbsp;Subhomoy Samanta</span></span>
         </div>
         
         <div class="alert alert-info">
@@ -290,7 +290,9 @@ function closeNav() {
     <script type="text/javascript">
         app.initialize();
     </script>
-   
+<script>
+$('#page_user').text(localStorage.name);
+</script>   
 </body>
 
 </html>
