--- a/platforms/browser/www/profile.html
+++ b/platforms/browser/www/profile.html
@@ -229,7 +229,7 @@
                             <br>
 
                             <div class="form-group text-center" style="margin-bottom:30px;">
-                                <img src="img/images-nxias/profile-image.jpg" width="40%" style="border-radius:50%;" />
+                                <img id="myImage" src="img/images-nxias/profile-image.jpg" width="40%" style="border-radius:50%;" />
                                 <input type="file" id="file1" name="image" accept="image/*" capture style="display:none" />
                                 <img src="img/images-nxias/camera.png" width="10%" id="upfile" onclick="capture();" style="cursor:pointer; margin-left:-100px; margin-bottom:-240px;"
                                 />
